--- a/index.html
+++ b/index.html
@@ -4,9 +4,53 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Filtro com Garrafa PET</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 40px;
+      line-height: 1.6;
+      background-color: #f9f9f9;
+      color: #333;
+    }
+    h1, h2 {
+      color: #2c3e50;
+    }
+    p {
+      margin-bottom: 15px;
+    }
+    ul {
+      margin-bottom: 15px;
+    }
+  </style>
 </head>
 <body>
   <h1>Como Construir um Filtro com Garrafa PET</h1>
-  <p>Aqui vai todo o passo a passo do filtro que você descreveu...</p>
+  
+  <h2>Materiais Necessários</h2>
+  <ul>
+    <li>1 garrafa PET de 2 litros</li>
+    <li>Tesoura ou faca</li>
+    <li>Algodão ou tecido fino</li>
+    <li>Areia fina</li>
+    <li>Carvão ativado</li>
+    <li>Pedrinhas pequenas ou cascalho</li>
+    <li>Água suja ou não tratada para testar o filtro</li>
+  </ul>
+  
+  <h2>Passo a Passo</h2>
+  <ol>
+    <li>Corte a parte inferior da garrafa PET, criando uma abertura ampla. Lave bem a garrafa.</li>
+    <li>Coloque uma camada de algodão ou tecido fino no fundo da garrafa (agora invertida).</li>
+    <li>Adicione uma camada de areia fina sobre o algodão.</li>
+    <li>Acrescente uma camada de carvão ativado sobre a areia.</li>
+    <li>Finalize com uma camada de pedrinhas pequenas ou cascalho sobre o carvão.</li>
+    <li>Coloque a água suja na parte superior da garrafa.</li>
+    <li>Deixe a água passar pelas camadas. A água filtrada sairá pela abertura inferior.</li>
+  </ol>
+  
+  <h2>Observações Importantes</h2>
+  <p>Este filtro melhora a aparência da água e reduz partículas sólidas, mas não elimina completamente microrganismos patogênicos. Para garantir potabilidade, recomenda-se ferver a água antes do consumo.</p>
+  
+  <p>Este método é útil para emergências, demonstrações educativas ou atividades escolares.</p>
 </body>
 </html>
