--- a/index.html
+++ b/index.html
@@ -4,53 +4,137 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Filtro com Garrafa PET</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
     body {
-      font-family: Arial, sans-serif;
-      margin: 40px;
-      line-height: 1.6;
-      background-color: #f9f9f9;
+      font-family: 'Roboto', sans-serif;
+      background-color: #eef2f7;
       color: #333;
+      line-height: 1.6;
+      padding: 20px;
     }
-    h1, h2 {
+
+    h1 {
+      text-align: center;
       color: #2c3e50;
+      margin-bottom: 30px;
+      font-size: 2.2rem;
     }
+
+    h2 {
+      color: #34495e;
+      margin-bottom: 15px;
+      font-size: 1.5rem;
+    }
+
     p {
       margin-bottom: 15px;
+      font-size: 1rem;
     }
-    ul {
-      margin-bottom: 15px;
+
+    ul, ol {
+      margin-bottom: 20px;
+      padding-left: 20px;
+    }
+
+    ul li, ol li {
+      margin-bottom: 10px;
+    }
+
+    .card {
+      background-color: #fff;
+      border-radius: 10px;
+      padding: 20px;
+      margin-bottom: 25px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      transition: transform 0.2s, box-shadow 0.2s;
+    }
+
+    .card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 15px rgba(0,0,0,0.15);
+    }
+
+    ul li::before {
+      content: "✔";
+      color: #27ae60;
+      margin-right: 8px;
+    }
+
+    /* Layout responsivo */
+    @media (max-width: 600px) {
+      body {
+        padding: 10px;
+      }
+      h1 {
+        font-size: 1.8rem;
+      }
+      h2 {
+        font-size: 1.3rem;
+      }
+    }
+    
+    .btn {
+      display: inline-block;
+      background-color: #27ae60;
+      color: #fff;
+      padding: 10px 20px;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background-color 0.2s;
+    }
+
+    .btn:hover {
+      background-color: #219150;
     }
   </style>
 </head>
 <body>
+
   <h1>Como Construir um Filtro com Garrafa PET</h1>
-  
-  <h2>Materiais Necessários</h2>
-  <ul>
-    <li>1 garrafa PET de 2 litros</li>
-    <li>Tesoura ou faca</li>
-    <li>Algodão ou tecido fino</li>
-    <li>Areia fina</li>
-    <li>Carvão ativado</li>
-    <li>Pedrinhas pequenas ou cascalho</li>
-    <li>Água suja ou não tratada para testar o filtro</li>
-  </ul>
-  
-  <h2>Passo a Passo</h2>
-  <ol>
-    <li>Corte a parte inferior da garrafa PET, criando uma abertura ampla. Lave bem a garrafa.</li>
-    <li>Coloque uma camada de algodão ou tecido fino no fundo da garrafa (agora invertida).</li>
-    <li>Adicione uma camada de areia fina sobre o algodão.</li>
-    <li>Acrescente uma camada de carvão ativado sobre a areia.</li>
-    <li>Finalize com uma camada de pedrinhas pequenas ou cascalho sobre o carvão.</li>
-    <li>Coloque a água suja na parte superior da garrafa.</li>
-    <li>Deixe a água passar pelas camadas. A água filtrada sairá pela abertura inferior.</li>
-  </ol>
-  
-  <h2>Observações Importantes</h2>
-  <p>Este filtro melhora a aparência da água e reduz partículas sólidas, mas não elimina completamente microrganismos patogênicos. Para garantir potabilidade, recomenda-se ferver a água antes do consumo.</p>
-  
-  <p>Este método é útil para emergências, demonstrações educativas ou atividades escolares.</p>
+
+  <div class="card">
+    <h2>Materiais Necessários</h2>
+    <ul>
+      <li>1 garrafa PET de 2 litros</li>
+      <li>Tesoura ou faca</li>
+      <li>Algodão ou tecido fino</li>
+      <li>Areia fina</li>
+      <li>Carvão ativado</li>
+      <li>Pedrinhas pequenas ou cascalho</li>
+      <li>Água suja ou não tratada para testar o filtro</li>
+    </ul>
+  </div>
+
+  <div class="card">
+    <h2>Passo a Passo</h2>
+    <ol>
+      <li>Corte a parte inferior da garrafa PET, criando uma abertura ampla. Lave bem a garrafa.</li>
+      <li>Coloque uma camada de algodão ou tecido fino no fundo da garrafa (invertida).</li>
+      <li>Adicione uma camada de areia fina sobre o algodão.</li>
+      <li>Acrescente uma camada de carvão ativado sobre a areia.</li>
+      <li>Finalize com uma camada de pedrinhas pequenas ou cascalho sobre o carvão.</li>
+      <li>Coloque a água suja na parte superior da garrafa.</li>
+      <li>Deixe a água passar pelas camadas. A água filtrada sairá pela abertura inferior.</li>
+    </ol>
+  </div>
+
+  <div class="card">
+    <h2>Observações Importantes</h2>
+    <p>Este filtro melhora a aparência da água e reduz partículas sólidas, mas não elimina completamente microrganismos patogênicos. Para garantir potabilidade, recomenda-se ferver a água antes do consumo.</p>
+    <p>Este método é útil para emergências, demonstrações educativas ou atividades escolares.</p>
+  </div>
+
+  <div style="text-align:center; margin-top:20px;">
+    <a href="#" class="btn">Aprenda Mais</a>
+  </div>
+
 </body>
 </html>
